force-app/main/default/objects/Address_Refresh__e/Address_Refresh__e.object-meta.xml
<CustomObject>
    <label>Address Refresh</label>
    <pluralLabel>Address Refresh</pluralLabel>
</CustomObject>