force-app/main/default/objects/Address_Refresh__e/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>