force-app/main/default/objects/Address_Refresh__e/fields/AddressId__c.field-meta.xml
<CustomField>
    <fullName>AddressId__c</fullName>
    <label>AddressId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>