force-app/main/default/objects/Address_Refresh__e/fields/GPMS_Name__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Name__c</fullName>
    <description>Address name of single refresh</description>
    <label>Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>