force-app/main/default/objects/Address_Refresh__e/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <label>Latitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>