force-app/main/default/objects/Address_Refresh__e/fields/Layer_Name__c.field-meta.xml
<CustomField>
    <fullName>Layer_Name__c</fullName>
    <label>Layer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>