force-app/main/default/objects/Address_Refresh__e/fields/Layer_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>Layer_Version_Id__c</fullName>
    <label>Layer Version Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>