force-app/main/default/objects/Address_Refresh__e/fields/LayerId__c.field-meta.xml
<CustomField>
    <fullName>LayerId__c</fullName>
    <label>LayerId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>